# bazel_libcpp_android_issue

./: BUILD.bazel  README.md  WORKSPACE
tools/: bazel.rc
